--- a/foozClient/package.json
+++ b/foozClient/package.json
@@ -20,7 +20,9 @@
     "express": "^4.18.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "remix-auth-discord": "^1.2.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
@@ -34,5 +36,12 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "overrides": {
+    "remix-auth-discord": {
+      "remix-auth-oauth2": "1.10.0",
+      "@remix-run/react": "^2.0.1",
+      "@remix-run/server-runtime": "^2.0.1"
+    }
   }
 }
