--- a/.github/workflows/publish_api.yml
+++ b/.github/workflows/publish_api.yml
@@ -9,8 +9,8 @@ on:
       - "foozApi/**"
 
 env:
-  AZ_RESOURCE_GROUP: rg-bicep-test
-  AZ_WEBAPP_NAME: wa-bicep-api
+  AZ_RESOURCE_GROUP: rg-fooz-tournament
+  AZ_WEBAPP_NAME: wa-fooz-api
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
