--- a/.github/workflows/publish_infrastucture.yml
+++ b/.github/workflows/publish_infrastucture.yml
@@ -9,7 +9,7 @@ on:
       - "foozInfra/**.bicep"
 
 env:
-  AZ_RESOURCE_GROUP: rg-fooz-tournaments
+  AZ_RESOURCE_GROUP: rg-fooz-tournament
   ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
