fix(infra): fix api pipeline variable

--- a/.github/workflows/publish_api.yml
+++ b/.github/workflows/publish_api.yml
@@ -15,7 +15,7 @@ env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-  API_IMAGE_NAME: fooz/client
+  API_IMAGE_NAME: fooz/api
 
 jobs:
   build:
