--- a/.github/workflows/compare_package_json.yml
+++ b/.github/workflows/compare_package_json.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: build  base docker image
-        working-directory: ./remix-app
+        working-directory: ./foozClient
         run: docker build . --file Dockerfile.base --tag ronhaland.azurecr.io/${{ env.BASE_IMAGE_NAME }}:${{ github.ref_name }}
 
       - name: Connect to container registry
