--- a/foozClient/package.json
+++ b/foozClient/package.json
@@ -4,11 +4,14 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "run-p dev:*",
+    "build": "run-s build:*",
     "dev:remix": "remix dev --manual",
     "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "build:remix": "remix build",
+    "build:worker": "remix-pwa build",
+    "dev": "run-p dev:*",
+    "dev:worker": "remix-pwa dev"
   },
   "dependencies": {
     "@remix-run/css-bundle": "^2.0.1",
@@ -22,7 +25,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "remix-auth-discord": "^1.2.1"
+    "remix-auth-discord": "^1.2.1",
+    "@remix-pwa/sw": "^2.1.12",
+    "@remix-pwa/strategy": "^2.1.9"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
@@ -32,7 +37,11 @@
     "eslint": "^8.38.0",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@remix-pwa/worker-runtime": "^2.0.8",
+    "@remix-pwa/dev": "2.0.31",
+    "remix-pwa": "^3.0.19",
+    "glob": "^10.3.10"
   },
   "engines": {
     "node": ">=18.0.0"
