--- a/foozApi/foozApi/foozApi.csproj
+++ b/foozApi/foozApi/foozApi.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>e5609646-f4aa-49cc-b3dc-de392348e0d0</UserSecretsId>
@@ -14,6 +14,12 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="TableContext">
+      <HintPath>..\..\..\TableContext\TableContext\bin\Release\net8.0\TableContext.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
