--- a/foozApi/foozApi/foozApi.csproj
+++ b/foozApi/foozApi/foozApi.csproj
@@ -13,13 +13,9 @@
     <PackageReference Include="Discord.Net.Rest" Version="3.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Ronhaland.TableContext" Version="0.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="TableContext">
-      <HintPath>..\..\..\TableContext\TableContext\bin\Release\net8.0\TableContext.dll</HintPath>
-    </Reference>
+    <PackageReference Include="System.Runtime.Caching" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
