--- a/foozClient/package.json
+++ b/foozClient/package.json
@@ -14,6 +14,8 @@
     "dev:worker": "remix-pwa dev"
   },
   "dependencies": {
+    "@remix-pwa/strategy": "^2.1.9",
+    "@remix-pwa/sw": "^2.1.12",
     "@remix-run/css-bundle": "^2.0.1",
     "@remix-run/express": "^2.0.1",
     "@remix-run/node": "^2.0.1",
@@ -23,25 +25,26 @@
     "express": "^4.18.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "remix-auth-discord": "^1.2.1",
-    "@remix-pwa/sw": "^2.1.12",
-    "@remix-pwa/strategy": "^2.1.9"
+    "remix-auth-discord": "^1.2.1"
   },
   "devDependencies": {
+    "@remix-pwa/dev": "2.0.31",
+    "@remix-pwa/worker-runtime": "^2.0.8",
     "@remix-run/dev": "^2.0.1",
     "@remix-run/eslint-config": "^2.0.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
+    "glob": "^10.3.10",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6",
-    "@remix-pwa/worker-runtime": "^2.0.8",
-    "@remix-pwa/dev": "2.0.31",
     "remix-pwa": "^3.0.19",
-    "glob": "^10.3.10"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18.0.0"
