--- a/.github/workflows/compare_package_json.yml
+++ b/.github/workflows/compare_package_json.yml
@@ -28,13 +28,16 @@ jobs:
         env:
           BRANCH_NAME: ${{ github.ref_name }}
 
+      - name: print isEqual output
+        run: echo ${{ steps.compare.outputs.isEqual == 'true' }} ${{ steps.compare.outputs.isEqual == 'false' }} ${{ steps.compare.outputs.isEqual == true }} ${{ steps.compare.outputs.isEqual == false }} ${{ steps.compare.outputs.isEqual }} ${{ !steps.compare.outputs.isEqual }}
+
   build-if-needed:
     runs-on: ubuntu-latest
     needs: compare-hash
-    if: ${{ ! needs.compare-hash.outputs.isEqual }}
+    if: ${{ needs.compare-hash.outputs.isEqual != 'true' }}
     steps:
       - name: print !isEqual output
-        run: echo ${{ ! needs.compare-hash.outputs.isEqual }}
+        run: echo ${{ needs.compare-hash.outputs.isEqual != 'true' }}
 
       - uses: actions/checkout@v4
       - name: build base docker image
