--- a/foozClient/package.json
+++ b/foozClient/package.json
@@ -14,6 +14,7 @@
     "dev:worker": "remix-pwa dev"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.1.3",
     "@remix-pwa/strategy": "^2.1.9",
     "@remix-pwa/sw": "^2.1.12",
     "@remix-run/css-bundle": "^2.0.1",
@@ -30,7 +31,8 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "remix-auth-discord": "^1.2.1"
+    "remix-auth-discord": "^1.2.1",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@remix-pwa/dev": "2.0.31",
