--- a/foozClient/package.json
+++ b/foozClient/package.json
@@ -4,58 +4,48 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "run-s build:*",
-    "dev:remix": "remix dev --manual",
-    "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc",
-    "build:remix": "remix build",
-    "build:worker": "remix-pwa build",
-    "dev": "run-p dev:*",
-    "dev:worker": "remix-pwa dev"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@atlaskit/pragmatic-drag-and-drop": "^1.1.3",
-    "@remix-pwa/strategy": "^2.1.9",
-    "@remix-pwa/sw": "^2.1.12",
-    "@remix-run/css-bundle": "^2.0.1",
-    "@remix-run/express": "^2.0.1",
-    "@remix-run/node": "^2.0.1",
-    "@remix-run/react": "^2.0.1",
-    "@remix-run/serve": "^2.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "isbot": "^3.6.8",
+    "@remix-pwa/worker-runtime": "^2.1.0",
+    "@remix-run/node": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
+    "@remix-run/serve": "^2.8.1",
+    "dotenv": "^16.4.5",
+    "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "remix-auth-discord": "^1.2.1",
+    "react-icons": "^5.0.1",
+    "remix-auth-discord": "^1.3.3",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
-    "@remix-pwa/dev": "2.0.31",
-    "@remix-pwa/worker-runtime": "^2.0.8",
-    "@remix-run/dev": "^2.0.1",
-    "@remix-run/eslint-config": "^2.0.1",
+    "@remix-pwa/dev": "^3.0.1",
+    "@remix-run/dev": "^2.8.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
-    "glob": "^10.3.10",
-    "npm-run-all": "^4.1.5",
-    "remix-pwa": "^3.0.19",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.1.6",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "overrides": {
-    "remix-auth-discord": {
-      "remix-auth-oauth2": "1.10.0",
-      "@remix-run/react": "^2.0.1",
-      "@remix-run/server-runtime": "^2.0.1"
-    }
   }
 }
