--- a/foozApi/foozApi/foozApi.csproj
+++ b/foozApi/foozApi/foozApi.csproj
@@ -9,11 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Data.Tables" Version="12.8.2" />
     <PackageReference Include="Discord.Net.Rest" Version="3.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="Ronhaland.TableContext" Version="0.1.3-alpha2" />
+    <PackageReference Include="Ronhaland.TableWorm" Version="0.2.0-alpha1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Runtime.Caching" Version="8.0.0" />
   </ItemGroup>
